# svc-task-details-repository-manager

./: .gitmodules  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: rust.yml
src/: main.rs
src/internal/: mod.rs
src/internal/interfaces/: mod.rs  recon_files_repository.rs  recon_tasks_aggregator.rs  recon_tasks_repository.rs  transformer.rs
src/internal/models/: mod.rs
src/internal/models/entities/: app_errors.rs  mod.rs  recon_tasks_models.rs
src/internal/models/view_models/: requests.rs  responses.rs
src/internal/services/: mod.rs  recon_tasks_aggregator.rs  recon_tasks_aggregator_service.rs  recon_tasks_aggregator_service_tests.rs
src/internal/services/core_logic/: mod.rs  transfomer.rs
src/internal/web_api/: handlers.rs  handlers_tests.rs  mod.rs  server.rs  utils.rs
